@@ -9,15 +9,9 @@ flags:
     dbus: false
     debuglocks: false
     benchmark: true
-    crypton: false
+    crypton: true
 packages:
 - '.'
-resolver: lts-22.3
+resolver: lts-22.9
 extra-deps:
-- git-lfs-1.2.1
-- http-client-restricted-0.1.0
-- torrent-10000.1.1
-- bencode-0.6.1.1
-- feed-1.3.2.1
-- bloomfilter-2.0.1.2
 allow-newer: true
