@@ -8,6 +8,7 @@ git-annex (10.20240130) UNRELEASED; urgency=medium
   * importfeed --force: Avoid creating duplicates of existing
     already downloaded files when yt-dlp or a special remote was used.
   * addurl, importfeed: Added --raw-except option.
+  * stack.yaml: Update to lts-22.9 and use crypton.
 
  -- Joey Hess <id@joeyh.name>  Mon, 29 Jan 2024 15:59:33 -0400
 
